--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
